--- a/lab10/page.html
+++ b/lab10/page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Now you can see</title>
+    <title>Now you see me</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
